--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ devtools::install_github("chrisandrewsphd/scoreMRDQ")
 
 ### Example 1
 
-This is a basic example which shows you how to score data from a single individual. `justme` is a data.frame with 15 variables and 1 row.  The 15 variables are the patient identifier followed by their 14 responses.
+This is a basic example which shows you how to score data from a single individual. `justme` is a data.frame with 60 variables and 1 row.  The 60 variables are the patient identifier followed by their 59 responses.
 
 This is a basic example which shows you how to solve a common problem:
 
@@ -50,6 +50,9 @@ scoreMRDQ(justme)
 ```
 
 ### Example 2
+
+If you need to score many respondents (or the same respondent at several visits), you can include them all in a single data.frame and call `scoreMVAQ()`. The data.frame must have 60 columns still but can have more than 1 row.
+
 ```{r example2}
 library(scoreMRDQ)
 
